# misc

./: .gitignore  AUTHORS  LICENSES  README.md
algos/: dijk.cpp  dijk.java  distvec.cpp
asm/: call.asm  curdir.asm  fibo.asm
boost/: args.cpp  contract.cpp  crc.cpp  dll_lib.cpp  dll_prog.cpp  fiber.cpp  geo.cpp  geo2.cpp  gil.cpp  gil2.cpp  goat.oc  graph.cpp  graph2.cpp  graph_gre.cpp  interproc.cpp  intrusive.cpp  intrusive.h  intrusive2.cpp  ios.cpp  mc_area.oc  mpi.cpp  multiprec.cpp  ode.cpp  ode.oc  ode.py  ode2.cpp  ode3.cpp  proc.cpp  ptree.cpp  py.cpp  rtree.cpp  sig.cpp  sort.cpp  spline.cpp  stacktrace.cpp  string.cpp  test.cpp  threadpool.cpp  threadpool2.cpp  threadpool3.cpp  (+1 more)
boost/comparison/: mc_area.oc  ode.oc  ode.py
cpp/: algo.cpp  concepts.cpp  concepts2.cpp  concepts3.cpp  concepts4.cpp  coroutines.cpp  cpp.cpp  cpp17.cpp  cpp20.cpp  cpp20_mod.cppm  cpp23.cpp  fs.cpp  iter.cpp  misc.cpp  set.cpp  sort.cpp  thread.cpp
cv/: ocv1.cpp  ocv2.cpp  ocv3.cpp  ocv4.cpp
geo/: closestpair.cpp  intersect.cpp  maxsubvec.cpp  qhulltst.cpp
geo/hull/: CMakeLists.txt  geo.h  hull.cpp  hull.h
graphs/: Graph.java  dijk.cpp
hdl/: calc.vhdl  clean.sh  conv.vhdl  countdown.vhdl  countdown_test.vhdl  cpu.vhdl  ram.vhdl  sevenseg.vhdl  tst1.vhdl  tst1_run.vhdl
hdl/calc/: Makefile  calc.vhdl  clkdiv.vhdl  conv.vhdl  cpu.vhdl  dbgout.vhdl  ram.vhdl  sevenseg.vhdl  testbench.vhdl
hdl/doc/: miniref.txt
hdl/lib/: bcd.vhdl  clkdiv.vhdl  conv.vhdl  div.vhdl  edge.vhdl  lcd.vhdl  lcd2.vhdl  lcd_rom.vhdl  lfsr.vhdl  ram.vhdl  sevenseg.vhdl  syncdata.vhdl  syncsig.vhdl  vga.vhdl
hdl/test/: ctr.vhdl  ctr_test.vhdl  edge.vhdl  edge_test.vhdl  lfsr.vhdl  lfsr_test.vhdl  ram.vhdl  vga.vhdl  vga_test.vhdl  vgatest.vhdl
hdl/tools/: div.cpp  jpgrom.cpp  jpgrom_4bit.cpp  lcd.c  lcd.h  string.c  string.h
libs/: graph_algos.h  graph_algos_tst.cpp  graph_conts.h  math_algos.h  math_algos_tst.cpp  math_algos_tst2.cpp  math_algos_tst3.cpp  math_algos_tst4.cpp  math_concepts.h  math_conts.h  plot_grover.gpl  str_algos.h  str_algos_tst.cpp  tensor.h  tensor_tst.cpp  test_qm.cpp  tree_algos.h  tree_algos_tst.cpp
os/: ack.cpp  exec_order.cpp  float.cpp  producer.cpp  producer_busy.cpp  producer_lim.cpp  producer_mon.cpp  producer_prio.cpp  producer_sys.cpp  producer_tsl.cpp  ringbuffer.cpp  sched.cpp  sel4-test1.c  stackprotector-test.c
os/asm/: asmtst.cpp  curdir.asm  curdir32.asm  pm.asm  strlen.asm
os/asm_x86/: basic_funcs.c  curdir64.asm  pm.asm
os/cpp_rv/: .gitignore  build.sh  entrypoint.s  entrypoint.s.in  get_externals.sh  linker.ld.in  main.cpp  run_emu.sh  rv_main.sv  rv_tb.sv  serial.h  startup.cpp  string.h
os/mem/: mem.cpp
os/sync/: banker.cpp  busysync.cpp  producer.cpp  producer_busy.cpp  producer_prio.cpp  ringbuffer.cpp  sema.h
parser/0-minimalistic/: clean.sh  lexer.l  parser.y
parser/0-veryminimalistic/: clean.sh  parser.y
parser/1-minimalistic/: clean.sh  left_recursion.y  parser.cpp  right_recursion.y  tst1.y  tst2.y
parser/1-minimalistic-cpp/: parser.cpp  parser.h  parser.y
parser/2-minimalistic-cpp/: lexer.l
parser/3-grammars/: LL1.cpp  cyk.cpp
parser/3-simplecalc/: build.sh  clean.sh  lexer.l  parser.cpp  parser.h  parser.y
parser/4-codegen/: CMakeLists.txt  ast.h  build.sh  clean.sh  lexer.l  parser.cpp  parser.h  parser.y  threeac.h  vm_0ac.cpp  zeroac.h
parser/5-llvm/: CMakeLists.txt  ast.h  build.sh  clean.sh  lexer.l  llasm.h  parser.cpp  parser.h  parser.y  runtime.c  sym.h
parser/6-arrays/: CMakeLists.txt  ast.h  build.sh  clean.sh  lexer.l  llasm.cpp  llasm.h  notes.txt  parser.cpp  parser.h  parser.y  runtime.cpp  sym.h
parser/6-arrays/test/: fibo.prog  test.prog
parser/expression/: CMakeLists.txt  expr_parser.c  expr_parser.cpp  expr_parser.h  expr_parser_recasc.cpp  expr_parser_recasc.h  lex.cpp
parser/expression/pure_c/: expr_parser.c  string.c  string.h
parser/grammars/: build.sh  clean.sh  dataflow.cpp  expr_parser.c  expr_parser.cpp  expr_parser.h  lex.cpp  ll1.cpp  ll1_expr.cpp  ll1_expr.l  lr1.cpp  lr1_expr.cpp  lr1_opprec.cpp  nfa_to_dfa.cpp  test.sh  test_opprec.sh
patterns/: composite.cpp  delegation.cpp  dispatch.cpp  dispatch.jl  factory.cpp  factory.java  observer.cpp  observer.java  observer2.cpp  proxy.cpp  proxy.java  roleobj.cpp  roleobj.java  visitor.cpp  visitor.java  visitor2.cpp  visitor3.cpp
qt/bt-0/: CMakeLists.txt  main.cpp
qt/bt-1/: CMakeLists.txt  bt.cpp  bt.h
qt/bt-2/: bt.cpp  bt.h
qt/font/: CMakeLists.txt  qttst.cpp
qt/gl/: CMakeLists.txt  qttst.cpp  qttst.h
qt/gl-0/: CMakeLists.txt  qttst.cpp  qttst.h
qt/gl-0-thread/: CMakeLists.txt  qttst.cpp  qttst.h
qt/gl-1-painter/: CMakeLists.txt  qttst.cpp  qttst.h
qt/gl-2-texture/: qttst.cpp  qttst.h
qt/gl-3-mathlib/: CMakeLists.txt  qttst.cpp  qttst.h
qt/gl-4-geo/: clean.sh  qttst.cpp  qttst.h
qt/gl-5-texturepaint/: CMakeLists.txt  qttst.cpp  qttst.h
qt/gl-6-plot/: CMakeLists.txt  glplot.cpp  glplot.h  test.cpp
qt/gl-7-stencil/: CMakeLists.txt  glplot.cpp  glplot.h  test.cpp
qt/list/: CMakeLists.txt  qttst.cpp  qttst.h
qt/list-2/: CMakeLists.txt  qttst.cpp  qttst.h
qt/min/: CMakeLists.txt  qttst.cpp  qttst.h
qt/misc/: filemap.cpp
qt/painter/: CMakeLists.txt  qttst.cpp  qttst.h
qt/painter-2/: CMakeLists.txt  qttst.cpp  qttst.h
qt/plot/: CMakeLists.txt  clean.sh  qcp.cpp  qcp.h
qt/plot-2/: CMakeLists.txt  charts.cpp  charts.h  clean.sh
qt/table/: CMakeLists.txt  qttst.cpp  qttst.h
qt/vk-0/: qttst.cpp  (+2 more)
qt/vk-2-uniforms/: CMakeLists.txt  cam.h  qttst.cpp  qttst.h  shader.frag  shader.vert
qt/vk-pendulum/: CMakeLists.txt  cam.h  obj.cpp  obj.h  pendulum.h  renderer.cpp  renderer.h  shader.vert  wnd.cpp  wnd.h
sdl/: audio.cpp
tests/: ack.cpp  algo.cpp  boundary_tracing.cpp  bullet.cpp  comb.cpp  concepts.cpp  cpp17.cpp  det.oc  det.py  float.cpp  fs.cpp  koch.oc  maps.cpp  mem.cpp  mem2.cpp  mfm.cpp  proc.cpp  producer.cpp  producerprio.cpp  scanpath.cpp  structurefactor.cpp  testaspect.java  testaspecttarget.java  track.cpp
wrapper/: build.sh  clean.sh  expr_parser.h  test_expr_parser.py
(+93 files in other folders)
